refactoring and fix unit tests